--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "url": "git+https://github.com/LeGustaVinho/screen-flow.git"
   },
   "dependencies": {
-	"com.legustavinho.legendary-tools-singleton": "https://github.com/LeGustaVinho/singleton.git",
-	"com.legustavinho.legendary-tools-state-machine": "https://github.com/LeGustaVinho/state-machine.git",
-	"com.legustavinho.legendary-tools-asset-provider": "https://github.com/LeGustaVinho/asset-provider.git",
-	"com.legustavinho.legendary-tools-graphs": "https://github.com/LeGustaVinho/graphs.git"
+	"com.legustavinho.legendary-tools-singleton": "https://github.com/LeGustaVinho/singleton.git#v1.0.0",
+	"com.legustavinho.legendary-tools-state-machine": "https://github.com/LeGustaVinho/state-machine.git#v1.0.0",
+	"com.legustavinho.legendary-tools-asset-provider": "https://github.com/LeGustaVinho/asset-provider.git#v1.0.0",
+	"com.legustavinho.legendary-tools-graphs": "https://github.com/LeGustaVinho/graphs.git#v1.0.0"
   },
   "author": {
     "name": "LeGustaVinho",
