--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.legustavinho.legendary-tools-screen-flow",
   "displayName": "Legendary Tools - Screen Flow",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "unity": "2019.4",
   "type": "library",
   "keywords": [],
@@ -11,10 +11,9 @@
     "url": "git+https://github.com/LeGustaVinho/screen-flow.git"
   },
   "dependencies": {
-	"com.legustavinho.legendary-tools-singleton": "https://github.com/LeGustaVinho/singleton.git",
-	"com.legustavinho.legendary-tools-state-machine": "https://github.com/LeGustaVinho/state-machine.git",
-	"com.legustavinho.legendary-tools-asset-provider": "https://github.com/LeGustaVinho/asset-provider.git",
-	"com.legustavinho.legendary-tools-graphs": "https://github.com/LeGustaVinho/graphs.git"
+	"com.legustavinho.legendary-tools-singleton": "1.0.1",
+	"com.legustavinho.legendary-tools-state-machine": "1.0.1",
+	"com.legustavinho.legendary-tools-asset-provider": "1.0.1"
   },
   "author": {
     "name": "LeGustaVinho",
