--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.legustavinho.legendary-tools-screen-flow",
   "displayName": "Legendary Tools - Screen Flow",
-  "version": "2.0.4",
+  "version": "3.0.0",
   "unity": "2019.4",
   "type": "library",
   "keywords": [],
@@ -11,6 +11,7 @@
     "url": "git+https://github.com/LeGustaVinho/screen-flow.git"
   },
   "dependencies": {
+    "com.legustavinho.legendary-tools-common": "1.2.0",
 	"com.legustavinho.legendary-tools-singleton": "1.0.1",
 	"com.legustavinho.legendary-tools-state-machine": "1.0.1",
 	"com.legustavinho.legendary-tools-asset-provider": "2.0.2"
