--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "com.legustavinho.legendary-tools-screen-flow",
   "displayName": "Legendary Tools - Screen Flow",
-  "version": "3.0.0",
+  "description": "Screen Flow is a UI screen and popup manager, facilitating UI loading and transition (uGUI).",
+  "version": "3.0.1",
   "unity": "2019.4",
-  "type": "library",
   "keywords": [],
   "category": "Extensions",
+  "documentationUrl": "https://github.com/LeGustaVinho/screen-flow/blob/main/README.md",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LeGustaVinho/screen-flow.git"
